# ai-clipping-lambda

./: .envrc_sample  .gitignore  Dockerfile  README.md  docker-compose.yml  handler.py  local_test.py  pyproject.toml  requirements.txt  serverless.yml
localstack/: init-aws.sh
src/: download.py  formatter.py  llm.py  ocr.py  processor.py  s3_uploader.py  sqs_sender.py
src/prompts/: system_prompt.txt  user_prompt.txt
src/utils/: helper.py  logger.py
tests/unit/: test_formatter.py  test_handler.py  test_llm.py  test_processor.py
verification/: compare_json_clips.py  extract_json_to_csv.py  lambda_csv_comparison.py  pdf_bbox_visualizer.py  run_local_tests.py
